UnitTest: Added UnitTest for Game and Arena. Fixed some code while testing