@@ -1,23 +1,28 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
-
 plugins {
     id 'magicalarena.java-application-conventions'
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
-    implementation 'org.apache.commons:commons-text'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    // Remove this line if you don't need EasyMock
+    testImplementation 'org.easymock:easymock:3.5.1'
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'magicalarena.app.App'
 }
 
 tasks.named('test') { 
-    useJUnitPlatform()
+    useJUnit()
+    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
 }
+
 test {
     testLogging {
         exceptionFormat "full"
